--- a/style.css
+++ b/style.css
@@ -12,3 +12,20 @@ canvas {
     width: 100vw;
     height: 100vh;
 }
+
+.x, .y {
+    position: fixed;
+    z-index: 10;
+    background-color: #555;
+    width: 250px;
+    height: 20px;
+    left: 10px;
+}
+
+.x {
+    top: 10px;
+}
+
+.y {
+    top: 40px;
+}
